# joyboard

./: Cargo.toml  README.md  architecture.md  deploy.sh  feature-design.md
core/: Cargo.toml
core/src/: lib.rs  state.rs
core/src/config/: keymap.rs  mod.rs
core/src/engine/: mod.rs  se_st.rs
core/src/input/: lut.rs
core/src/mouse/: mod.rs
core/src/output/: mod.rs
daemon/: Cargo.toml
daemon/src/: main.rs  web.rs
daemon/src/tui/: mod.rs
overlay/: Cargo.toml
overlay/src/: main.rs
src/: main.rs  state.rs  web.rs
src/config/: keymap.rs  mod.rs
src/engine/: grid.rs  layer.rs  mod.rs  se_st.rs
src/input/: evdev.rs  lut.rs  mod.rs
src/output/: mod.rs  uinput.rs
src/overlay/: mod.rs
src/tui/: mod.rs
web/: index.html
