[package]
name = "joyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# core: 输入 + 输出
evdev = "0.12"
uinput = { version = "0.1", default-features = false }
log = "0.4"
env_logger = "0.11"
libc = "0.2"

# 可选 feature: TUI
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }

# 可选 feature: Web 配置工具
axum = { version = "0.7", features = ["ws"], optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }

# 可选 feature: GTK 浮窗
gtk = { version = "0.18", features = ["v3_24"], optional = true }

[features]
default = ["tui"]
full = ["tui", "web"]
tui = ["ratatui", "crossterm"]
web = ["axum", "tower-http"]
overlay = ["gtk"]
